[Extensions] Generate all schema resources

Some schema resources weren't being generated (presumably because
resource generation was previously linked to function registration).
However, generated schema resources are a lot better, because they strip
out comments and whitespace, making parsing them into JSON significantly
faster.

Generate all schema resources, and remove the grit files containing the
JSON.

Note: because inline enums are disallowed (see crbug.com/472279), some
schemas had to be updated. Since they weren't previously compiled, this
wasn't caught.

This also eliminates a 100k resource file (extensions_api_resources.pak).

BUG=638758

Review-Url: https://codereview.chromium.org/2257003002
Cr-Commit-Position: refs/heads/master@{#413200}

Former-commit-id: 2d823a6736d032aa3215d1ee0994031bb0245e5b